# twofold

./: .env.example  CODEOWNERS  CONTRIBUTING.md  LICENSE  agent.md  plan.md
agents/: README.md  __init__.py
agents/aggregate/: Dockerfile  README.md
agents/aggregate/scripts/: lint.sh
agents/changewatcher/: Dockerfile  README.md
agents/changewatcher/scripts/: lint.sh
agents/geo/: Dockerfile  README.md  pyproject.toml
agents/geo/app/: __init__.py  __main__.py  cli.py  config.py  logging.py  pipeline.py  repository.py  shapes.py
agents/geo/scripts/: test.sh
agents/geo/tests/: test_cli.py  test_pipeline.py
agents/ingest/: Dockerfile  LICENSE  README.md  pyproject.toml
agents/ingest/app/: __init__.py  __main__.py  cli.py  config.py  lineage.py  logging.py  normalization.py  pipeline.py  repository.py  schemas.py  storage.py  utils.py
agents/ingest/app/formats/: __init__.py  _common.py  csv.py  excel.py  html.py  pdf.py
agents/ingest/scripts/: build.sh  lint.sh  publish.sh  test.sh
agents/ingest/tests/: test_cli.py  test_format_conversion.py  test_normalization.py  test_pipeline.py
agents/insights/: Dockerfile  README.md
agents/insights/scripts/: lint.sh
agents/quality/: Dockerfile  README.md  pyproject.toml
agents/quality/app/: __init__.py  __main__.py  cli.py  config.py  logging.py  pipeline.py  repository.py
agents/quality/app/checks/: __init__.py  base.py  coordinate_range.py  duration_outliers.py  duration_range.py  monthly_completeness.py  schema.py  uniqueness.py  utils.py
agents/quality/scripts/: build.sh  lint.sh  publish.sh  test.sh
agents/quality/tests/: test_pipeline.py  test_repository.py
backend/: Dockerfile  README.md
backend/scripts/: build.sh  migrate.sh
docs/: README.md  requirements.md
frontend/: Dockerfile  README.md
frontend/scripts/: lint.sh
infra/: README.md  docker-compose.yml
infra/postgres/: migrate.sh  smoke.sh  smoke.sql
infra/postgres/migrations/: 0001_initial.sql  0002_quality_flags.sql
samples/: README.md  rosaviation_sample.csv
