[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "agent-quality"
version = "0.1.0"
description = "Quality validation agent for normalized flight datasets."
readme = "README.md"
authors = [{ name = "Twofold" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9",
  "pydantic>=2.5",
  "pydantic-settings>=2.2",
  "pandas>=2.0",
  "polars>=0.20",
  "psycopg[binary]>=3.1",
  "python-dateutil>=2.8",
  "rich>=13.0",
  "black>=23.0",
  "ruff>=0.1",
  "pytest>=7.0",
]

[project.optional-dependencies]
checks = [
  "great-expectations>=0.18",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "app",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

